@@ -133,9 +133,6 @@ g_object_new
 g_object_newv
 g_object_new_valist
 g_object_notify
-g_object_is_floating
-g_object_ref_sink
-g_object_force_floating
 g_object_ref
 g_object_unref
 g_object_remove_weak_pointer
@@ -161,7 +158,6 @@ g_value_dup_object
 g_value_take_object
 #ifndef G_DISABLE_DEPRECATED
 g_value_set_object_take_ownership
-g_object_compat_control
 #endif
 g_signal_connect_object
 #endif
